tests/sksl/errors/RedeclareVariable.glsl
### Compilation failed:

error: 4: symbol 'x' was already defined
int x;
^^^^^
error: 5: symbol 'x' was already defined
float4x4 x;
^^^^^^^^^^
error: 6: symbol 'x' was already defined
bool2 x[2];
^^^^^^^^^^
error: 7: symbol 'x' was already defined
S x;
^^^
error: 11: symbol 'y' was already defined
    float2 y;
    ^^^^^^^^
error: 12: symbol 'y' was already defined
    int y;
    ^^^^^
error: 13: symbol 'y' was already defined
    float y[4];
    ^^^^^^^^^^
error: 14: symbol 'y' was already defined
    S y;
    ^^^
8 errors
